jenkins_elb_sg.tf
resource "aws_security_group" "jenkins_elb" {
    name = "jenkins_elb_sg"
    description = "Allow incoming HTTP connections."

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
	cidr_blocks = ["${var.vpc_cidr}"]
    }

    egress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
	cidr_blocks = ["${var.vpc_cidr}"]
    }

    egress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    //egress { # SQL Server
    //    from_port = 1433
    //    to_port = 1433
    //    protocol = "tcp"
    //    cidr_blocks = ["${var.private_subnet_cidr}"]
    //}

    //egress { # MySQL
    //    from_port = 3306
    //    to_port = 3306
    //    protocol = "tcp"
    //    cidr_blocks = ["${var.private_subnet_cidr}"]
    //}

    vpc_id = "${aws_vpc.default.id}"

    tags = {
        Name = "dani-test-jenkins-sg"
    }
}
